# RushB

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  generate-module-template.sh  init-modules.sh  todo
.templates/: CMakeLists.txt  TEMPLATE.cpp  TEMPLATE.h
ModuleInterface/: ProtoModuleInterface.pb.h  generate.sh
arduino/rushb/: rushb.ino
docs/: Overview.drawio
docs/manual/: Makefile  manual.tex
example-modules/: Makefile  build-examples.sh
example-modules/Reader/: Makefile
example-modules/Reader/include/: Reader.h
example-modules/Reader/src/: Reader.cpp
example-modules/Writer/: Makefile
example-modules/Writer/include/: Writer.h
example-modules/Writer/src/: Writer.cpp
example-modules/reader/: CMakeLists.txt
example-modules/reader/include/: Reader.h
example-modules/reader/src/: Reader.cpp
example-modules/writer/: CMakeLists.txt
example-modules/writer/include/: Writer.h
example-modules/writer/src/: Writer.cpp
include/: Common.h  IModuleInterface.h  LogUtils.h  Logger.h  Module.h  ModuleHandler.h  ModuleInterface.h  ModuleManager.h  ParameterManager.h  SignalHandler.h  Spider.h
modules/: CMakeLists.txt
modules/controller/: CMakeLists.txt
modules/controller/include/: Controller.h
modules/controller/src/: Controller.cpp
modules/example-modules/: CMakeLists.txt
modules/example-modules/reader/: CMakeLists.txt  README.md
modules/example-modules/reader/include/: Reader.h
modules/example-modules/reader/src/: Reader.cpp
modules/example-modules/writer/: CMakeLists.txt  README.md
modules/example-modules/writer/include/: Writer.h
modules/example-modules/writer/src/: Writer.cpp
modules/inolink/: CMakeLists.txt
modules/inolink/include/: InoLink.h
modules/inolink/src/: InoLink.cpp
modules/objectdetector/: CMakeLists.txt
modules/objectdetector/detection-lib/include/: DetectionUtils.h  DnnObjectDetector.h  IObjectDetector.h  TfObjectDetector.h
modules/objectdetector/detection-lib/src/: DnnObjectDetector.cpp  TfObjectDetector.cpp
modules/objectdetector/include/: DetectionUtils.h  DistanceEstimator.h  KnownObjects.h  ObjectDetector.h
modules/objectdetector/resources/: EstimatorConfig.xml
modules/objectdetector/src/: DistanceEstimator.cpp  ObjectDetector.cpp
modules/videoplayer/: CMakeLists.txt
modules/videoplayer/include/: VideoPlayer.h
modules/videoplayer/src/: VideoPlayer.cpp
modules/videopub/: CMakeLists.txt
modules/videopub/include/: VideoPub.h
modules/videopub/src/: VideoPub.cpp
modules/videosub/: CMakeLists.txt
modules/videosub/include/: VideoSub.h
modules/videosub/src/: VideoSub.cpp
modules/zmqpipeline/: CMakeLists.txt
modules/zmqpipeline/include/: ProtoModuleInterface.pb.h  ZmqPipeline.h
modules/zmqpipeline/proto/: ProtoModuleInterface.proto  generate-proto.sh
modules/zmqpipeline/src/: ProtoModuleInterface.pb.cc  ZmqPipeline.cpp
resources/: ModuleConfig.xml  Modules.xml
src/: Logger.cpp  Main.cpp  ModuleHandler.cpp  ModuleManager.cpp  ParameterManager.cpp  SignalHandler.cpp  Spider.cpp
